@@ -11,6 +11,7 @@ ver 0.22 (not yet released)
   - iso9660: support seeking
 * decoder
   - sidplay: add option "default_genre"
+  - sidplay: map SID name field to "Album" tag
 * filter
   - ffmpeg: new plugin based on FFmpeg's libavfilter library
   - hdcd: new plugin based on FFmpeg's "af_hdcd" for HDCD playback
